==> GirlsOfSteelRobotics/Electronics-Tester/Arduino/libraries/TFT/TFT.cpp <==
#include "TFT.h"
#define DDR_CS      DDRB
#define PORT_CS     PORTB
#define CS_BIT      0x04
#define CS_OUTPUT   {DDR_CS|=CS_BIT;}
#define CS_HIGH     {PORT_CS|=CS_BIT;}
#define CS_LOW      {PORT_CS&=~CS_BIT;}
#define DDR_RS      DDRB
#define PORT_RS     PORTB
#define RS_BIT      0x08
#define RS_OUTPUT   {DDR_RS|=RS_BIT;}
#define RS_HIGH     {PORT_RS|=RS_BIT;}
#define RS_LOW      {PORT_RS&=~RS_BIT;}
#define DDR_WR      DDRB
#define PORT_WR     PORTB
#define WR_BIT      0x10
#define WR_OUTPUT   {DDR_WR|=WR_BIT;}
#define WR_HIGH     {PORT_WR|=WR_BIT;}
#define WR_LOW      {PORT_WR&=~WR_BIT;}
#define DDR_RD      DDRB
#define PORT_RD     PORTB
#define RD_BIT      0x20
#define RD_OUTPUT   {DDR_RD|=RD_BIT;}
#define RD_HIGH     {PORT_RD|=RD_BIT;}
#define RD_LOW      {PORT_RD&=~RD_BIT;}
#define DDR_CS      DDRB
#define PORT_CS     PORTB
#define CS_BIT      0x10
#define CS_OUTPUT   {DDR_CS|=CS_BIT;}
#define CS_HIGH     {PORT_CS|=CS_BIT;}
#define CS_LOW      {PORT_CS&=~CS_BIT;}
#define DDR_RS      DDRB
#define PORT_RS     PORTB
#define RS_BIT      0x20
#define RS_OUTPUT   {DDR_RS|=RS_BIT;}
#define RS_HIGH     {PORT_RS|=RS_BIT;}
#define RS_LOW      {PORT_RS&=~RS_BIT;}
#define DDR_WR      DDRB
#define PORT_WR     PORTB
#define WR_BIT      0x40
#define WR_OUTPUT   {DDR_WR|=WR_BIT;}
#define WR_HIGH     {PORT_WR|=WR_BIT;}
#define WR_LOW      {PORT_WR&=~WR_BIT;}
#define DDR_RD      DDRB
#define PORT_RD     PORTB
#define RD_BIT      0x80
#define RD_OUTPUT   {DDR_RD|=RD_BIT;}

void TFT::all_pin_input(void)
{
#ifdef SEEEDUINO
    DDRD &=~ 0xfc;
    DDRB &=~ 0x03;
#endif

#ifdef MEGA
    DDRE &=~ 0x38;
    DDRG &=~ 0x20;
    DDRH &=~ 0x78;
#endif
}

void TFT::all_pin_output(void)
{
#ifdef SEEEDUINO
    DDRD |= 0xfc;
    DDRB |= 0x03;
#endif

#ifdef MEGA
    DDRE |= 0x38;
    DDRG |= 0x20;
    DDRH |= 0x78;
#endif
}

void TFT::all_pin_low(void)
{
#ifdef SEEEDUINO
    PORTD &=~ 0xfc;
    PORTB &=~ 0x03;
#endif

#ifdef MEGA
    PORTE &=~ 0x38;
    PORTG &=~ 0x20;
    PORTH &=~ 0x78;
#endif
}

void TFT::pushData(unsigned char data)
{
#ifdef SEEEDUINO
    all_pin_low();
    PORTD |= (data<<2);
    PORTB |= (data>>6);
#endif

#ifdef MEGA
    PORTE = (PINE & ~0x38) |
      ((data<<4) & 0x30) |
      ((data & 0x08));
    PORTG = (PING & ~0x20) |
      ((data<<3) & 0x20);
    PORTH = (PINH & ~0x78) |
      ((data>>1) & 0x78);
#endif
}

unsigned char TFT::getData(void)
{
    unsigned char data=0;
    delay(1);
#ifdef SEEEDUINO
    data |= ((PIND&0xfc)>>2);
    data |= ((PINB&0x03)<<6);
#endif

#ifdef MEGA
    data |= (PINE & 0x30)>>4;
    data |= (PING & 0x20)>>3;
    data |= (PINE & 0x08);
    data |= (PINH & 0x78)<<1;
#endif
    return data;
}

void TFT::init(void)
{
    CS_OUTPUT;
    RD_OUTPUT;
    WR_OUTPUT;
    RS_OUTPUT;

    Tft.all_pin_output();
    Tft.all_pin_low();

    delay(100);

    // Turn off the screen to start via Display Control 1
    sendCommand(0x07);	// Display control 1
    sendData(0x0030);	// PTDE=00 no partial image, BASEE=0 base image disabled
			// GON=1 DTE=1 Normal display CL=0 8-bit off D0,D1=00 base image off
    sendCommand(0x01);	// Driver Output Control
    sendData(0x0100);	// SM=0 SS=1 set shift direction appropriate for the LCD
    // 0x03 Entry Mode is set below by setDrawingOrientation()
    sendCommand(0x04);	// Resize Control
    sendData(0x0000);	// RSZ, RCH, RCV = 0 for no resizing
    sendCommand(0x08);	// Display Control 2
    sendData(0x0302);	// FP=3 BP=2 front and back porch
    sendCommand(0x0A);	// Display Control 4
    sendData(0x0000);	// FMARKOE=0 FMI=0 fmark output pin disabled
    sendCommand(0x0C);	// RGB Display Interface Control 1
    sendData(0x0000);	// ENC=00 RM=0 DM=00 RIM=0 RGB input mode off
    sendCommand(0x0D);	// Frame Marker Position
    sendData(0x0000);	// FMP=0 frame mark output on line zero
    sendCommand(0x0F);	// RGB Display Interface Control 2
    sendData(0x0000);	// VSPL=0 HSPL=0 EPL=0 DPL=0 pin settings for RGB mode

    delay(100);

    sendCommand(0x30);	// Gamma Control 1
    sendData(0x0000);
    sendCommand(0x31);	// Gamma Control 2
    sendData(0x0405);
    sendCommand(0x32);	// Gamma Control 3
    sendData(0x0203);
    sendCommand(0x35);	// Gamma Control 4
    sendData(0x0004);
    sendCommand(0x36);	// Gamma Control 5
    sendData(0x0B07);
    sendCommand(0x37);	// Gamma Control 6
    sendData(0x0000);
    sendCommand(0x38);	// Gamma Control 7
    sendData(0x0405);
    sendCommand(0x39);	// Gamma Control 8
    sendData(0x0203);
    sendCommand(0x3c);	// Gamma Control 9
    sendData(0x0004);
    sendCommand(0x3d);	// Gamma Control 10
    sendData(0x0B07);
    sendCommand(0x20);	// Horizontal DRAM Address Set
    sendData(0x0000);
    sendCommand(0x21);	// Vertical DRAM Address Set
    sendData(0x0000);
    clearWindow();

    delay(100);

    sendCommand(0x60);	// Driver Output Control 2 (see also 0x01 above)
    sendData(0xa700);	// SCN=0 NL=2F GS=1 number of lines is 320, gate scan inverted
    sendCommand(0x61);	// Base Image Display Control
    sendData(0x0001);	// NDL=0 VLE=0 REV=1 disable non-display area output, vertical scrolling, display is normally white
    sendCommand(0x90);	// Panel Interface Control 1
    sendData(0x003A);	// DIV=0 RTNI=58d clock division ratio 1:1, line period is every 58 clocks
    sendCommand(0x95);	// Panel Interface Control 2
    sendData(0x021E);	// DIVE=10 division ratio 1/8; 1E is default value for unlabeled bits
    sendCommand(0x80);	// Partial Image 1 Display Position
    sendData(0x0000);	// PTDP0=0 display start position
    sendCommand(0x81);	// Partial Image 1 Start Address
    sendData(0x0000);	// PTSA0=0
    sendCommand(0x82);	// Partial Image 1 End Address
    sendData(0x0000);	// PTEA0=0
    sendCommand(0x83);	// Partial Image 2 Display Position
    sendData(0x0000);	// PTDP1=0
    sendCommand(0x84);	// Partial Image 2 Start Address
    sendData(0x0000);	// PTSA1=0
    sendCommand(0x85);	// Partial Image 2 End Address
    sendData(0x0000);	// PTEA1=0
    sendCommand(0xB0);	// Power Control 2
    sendData(0x140D);	// VCM=010100 VGLSEL=00 VGHBT=01 set VCOM to -0.925, VGL to -7.5, VGH to 3*AVDD

    sendCommand(0x10);	// Power Control 1
    sendData(0x10E0);	// SAP=1 APE=1 AP=110 enable power supply with min current draw
			// SLP=0 STB=0 sleep and standby both disabled
			// why not 10E0?
    delay(100);

    // Paint the screen black 
    // (The drawing window was reset to the entire screen above)
    beginDrawing();
    for(unsigned int x=0; x<MAX_X; x++) {
        for(unsigned int y=0; y<MAX_Y; y++) {
            sendData(BLACK);
        }
    }
    sendCommand(0x07);	// Display control 1
    sendData(0x0133);	// PTDE=00 no partial image, BASEE=1 base image enabled
			// GON=1 DTE=1 Normal display CL=0 8-bit off D0,D1=11 base image display

    // Initial setting for Entry Mode and associated text direction variable
    _textDirection = LEFT2RIGHT;
    setDrawOrientation(_textDirection);
    
    setTextFont(&bigFont);
    //setTextFont(&simpleFont);
}
